Finished the UI Toolkit Tutorial

--- a/UiToolKit/Assets/GameDev.TVAssets/TaskList/Editor/EditorWindow/TaskListEditor.uxml
+++ b/UiToolKit/Assets/GameDev.TVAssets/TaskList/Editor/EditorWindow/TaskListEditor.uxml
@@ -1,10 +1,28 @@
-<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
+<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="True">
     <Style src="project://database/Assets/GameDev.TVAssets/TaskList/Editor/EditorWindow/TaskListEditor.uss?fileID=7433441132597879392&amp;guid=e6dcafe4fa692f24a937f2fb6e5802f8&amp;type=3#TaskListEditor" />
-    <ui:VisualElement name="AddingTasks">
-        <ui:TextField picking-mode="Ignore" label="Text Field" value="filler text" text="filler text" name="taskText" />
-        <ui:Button text="Button" display-tooltip-when-elided="true" name="addTaskButton" />
+    <ui:VisualElement name="LoadingTasks" class="container">
+        <uie:ObjectField label="Load Saved Tasks" name="savedTasksObjectField" />
+        <ui:Button text="Load Tasks" display-tooltip-when-elided="true" name="loadTasksButton" class="button" />
     </ui:VisualElement>
-    <ui:VisualElement name="ShowTasks">
-        <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" name="taskList" />
+    <ui:VisualElement name="SearchingTasks" class="container">
+        <ui:Label text="Search for Tasks" display-tooltip-when-elided="true" name="searchHeader" class="header" />
+        <uie:ToolbarSearchField focusable="true" name="searchBox" style="-unity-text-align: upper-left; width: auto;" />
+    </ui:VisualElement>
+    <ui:VisualElement name="AddingTasks" class="container" style="flex-direction: row; flex-wrap: wrap;">
+        <ui:Label text="Add new Task" display-tooltip-when-elided="true" name="AddTasksHeader" class="header" />
+        <ui:TextField picking-mode="Ignore" text="new task..." name="taskText" style="width: 80%;" />
+        <ui:Button text="Add" display-tooltip-when-elided="true" name="addTaskButton" class="background" style="width: 15%;" />
+    </ui:VisualElement>
+    <ui:VisualElement name="ShowTasks" class="container expand">
+        <ui:Label text="Current Tasks" display-tooltip-when-elided="true" name="DisplayTaskHeader" class="header" />
+        <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" name="taskList" class="border expand" style="height: auto;" />
+    </ui:VisualElement>
+    <ui:VisualElement name="TrackingTasks" class="container">
+        <ui:Button text="Save Progress" display-tooltip-when-elided="true" name="saveProgressButton" class="button" />
+        <ui:Label text="Progress&#10;" display-tooltip-when-elided="true" name="ProgressHeader" class="header" style="margin-top: 15px;" />
+        <ui:ProgressBar value="22" title="---%" name="taskProgressBar" high-value="1" />
+    </ui:VisualElement>
+    <ui:VisualElement name="Notification" class="container">
+        <ui:Label text="Label" display-tooltip-when-elided="true" name="notificationLable" class="notification" />
     </ui:VisualElement>
 </ui:UXML>
